--- a/src/app/boton/boton.component.html
+++ b/src/app/boton/boton.component.html
@@ -1,12 +1,29 @@
 <table>
   <tr>
-      <td><img (click)="changeColor()" id="piece1"  src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
-      <td><img (click)="changeColor()" id="piece2"  src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
-      <td><img (click)="changeColor()" id="piece3"  src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[0]}}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[1]}}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[2]}}.png" alt=""></td>
   </tr>
   <tr>
-      <td><img (click)="changeColor()" id="piece4" src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
-      <td><img (click)="changeColor()" id="piece5" src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
-      <td><img (click)="changeColor()" id="piece6" src="../../assets/images/Botones_Redondos/{{ index }}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
+      <td><img src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
+<!--       
+      <td *ngIf="pieza0=true" ><img src="../../assets/images/Botones_Redondos/{{}}.png" alt=""></td>
+
+      <td *ngIf="pieza1=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
+      <td *ngIf="pieza1=true" ><img src="../../assets/images/Botones_Redondos/2.png" alt=""></td>
+
+      <td *ngIf="pieza2=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
+      <td *ngIf="pieza2=true" ><img src="../../assets/images/Botones_Redondos/3.png" alt=""></td>
+ 
+  </tr>
+  <tr>
+    <td *ngIf="pieza3=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
+    <td *ngIf="pieza3=true" ><img src="../../assets/images/Botones_Redondos/4.png" alt=""></td>
+    <td *ngIf="pieza4=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
+    <td *ngIf="pieza4=true" ><img src="../../assets/images/Botones_Redondos/5.png" alt=""></td>
+    <td *ngIf="pieza5=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
+    <td *ngIf="pieza5=true" ><img src="../../assets/images/Botones_Redondos/6.png" alt=""></td> -->
   </tr>
 </table>
