Ahora con soniditos!!!

--- a/src/app/boton/boton.component.html
+++ b/src/app/boton/boton.component.html
@@ -3,14 +3,14 @@
 
 <table>
   <tr>
-    <td><img (click)="respuestaUsuario(0)" src="../../assets/images/Botones_Redondos/{{piezaArray[0]}}.png" alt=""></td>
-    <td><img (click)="respuestaUsuario(1)" src="../../assets/images/Botones_Redondos/{{piezaArray[1]}}.png" alt=""></td>
-    <td><img (click)="respuestaUsuario(2)" src="../../assets/images/Botones_Redondos/{{piezaArray[2]}}.png" alt=""></td>
+    <td id=boton1><img (click)="respuestaUsuario(0)"  src="../../assets/images/Botones_Redondos/{{piezaArray[0]}}.png" alt=""></td>
+    <td id=boton2><img (click)="respuestaUsuario(1)" src="../../assets/images/Botones_Redondos/{{piezaArray[1]}}.png" alt=""></td>
+    <td id=boton3><img (click)="respuestaUsuario(2)" src="../../assets/images/Botones_Redondos/{{piezaArray[2]}}.png" alt=""></td>
   </tr>
   <tr>
-    <td><img (click)="respuestaUsuario(3)" src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
-    <td><img (click)="respuestaUsuario(4)" src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
-    <td><img (click)="respuestaUsuario(5)" src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
+    <td id=boton4><img (click)="respuestaUsuario(3)" src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
+    <td id=boton5><img (click)="respuestaUsuario(4)" src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
+    <td id=boton6><img (click)="respuestaUsuario(5)" src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
     <!--       
       <td *ngIf="pieza0=true" ><img src="../../assets/images/Botones_Redondos/{{}}.png" alt=""></td>
 
