Pongo el score aunque Eugeino se ha quejado, aunque tengo que esperar porque hay que poner los botoenes bien

--- a/src/app/boton/boton.component.html
+++ b/src/app/boton/boton.component.html
@@ -1,4 +1,5 @@
 <button (click)="start()">Start</button>
+<p>Score: {{score}} puntos.</p>
 
 
 <table>
@@ -11,22 +12,5 @@
     <td id=boton4><img (click)="respuestaUsuario(3)" src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
     <td id=boton5><img (click)="respuestaUsuario(4)" src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
     <td id=boton6><img (click)="respuestaUsuario(5)" src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
-    <!--       
-      <td *ngIf="pieza0=true" ><img src="../../assets/images/Botones_Redondos/{{}}.png" alt=""></td>
-
-      <td *ngIf="pieza1=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
-      <td *ngIf="pieza1=true" ><img src="../../assets/images/Botones_Redondos/2.png" alt=""></td>
-
-      <td *ngIf="pieza2=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
-      <td *ngIf="pieza2=true" ><img src="../../assets/images/Botones_Redondos/3.png" alt=""></td>
- 
-  </tr>
-  <tr>
-    <td *ngIf="pieza3=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
-    <td *ngIf="pieza3=true" ><img src="../../assets/images/Botones_Redondos/4.png" alt=""></td>
-    <td *ngIf="pieza4=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
-    <td *ngIf="pieza4=true" ><img src="../../assets/images/Botones_Redondos/5.png" alt=""></td>
-    <td *ngIf="pieza5=false" ><img src="../../assets/images/Botones_Redondos/0.png" alt=""></td>
-    <td *ngIf="pieza5=true" ><img src="../../assets/images/Botones_Redondos/6.png" alt=""></td> -->
   </tr>
 </table>
