--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Simon dice
-  </h1>
+<div class="superDiv">
+  <div class="contTitulo" style="text-align:center">
+    <h1>Simon dice:</h1>
+    <h2>Que empiece el juego! </h2>
+  </div>
+  <app-boton></app-boton>
 </div>
-<h2>Que empiece el juego! </h2>
-<app-boton></app-boton>
