--- a/src/app/boton/boton.component.html
+++ b/src/app/boton/boton.component.html
@@ -1,16 +1,18 @@
-<button (click)="start()">Start</button>
-<p>Score: {{score}} puntos.</p>
-
-
-<table>
-  <tr>
-    <td id=boton1><img (click)="respuestaUsuario(0)"  src="../../assets/images/Botones_Redondos/{{piezaArray[0]}}.png" alt=""></td>
-    <td id=boton2><img (click)="respuestaUsuario(1)" src="../../assets/images/Botones_Redondos/{{piezaArray[1]}}.png" alt=""></td>
-    <td id=boton3><img (click)="respuestaUsuario(2)" src="../../assets/images/Botones_Redondos/{{piezaArray[2]}}.png" alt=""></td>
-  </tr>
-  <tr>
-    <td id=boton4><img (click)="respuestaUsuario(3)" src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
-    <td id=boton5><img (click)="respuestaUsuario(4)" src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
-    <td id=boton6><img (click)="respuestaUsuario(5)" src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
-  </tr>
-</table>
+<div class="contenido">
+    <h2>Score: {{score}} puntos.</h2>
+  <table>
+      
+    <tr>
+      <td id=boton1><img (click)="respuestaUsuario(0)"  src="../../assets/images/Botones_Redondos/{{piezaArray[0]}}.png" alt=""></td>
+      <td id=boton2><img (click)="respuestaUsuario(1)" src="../../assets/images/Botones_Redondos/{{piezaArray[1]}}.png" alt=""></td>
+      <td id=boton3><img (click)="respuestaUsuario(2)" src="../../assets/images/Botones_Redondos/{{piezaArray[2]}}.png" alt=""></td>
+    </tr>
+    <tr>
+      <td id=boton4><img (click)="respuestaUsuario(3)" src="../../assets/images/Botones_Redondos/{{piezaArray[3]}}.png" alt=""></td>
+      <td id=boton5><img (click)="respuestaUsuario(4)" src="../../assets/images/Botones_Redondos/{{piezaArray[4]}}.png" alt=""></td>
+      <td id=boton6><img (click)="respuestaUsuario(5)" src="../../assets/images/Botones_Redondos/{{piezaArray[5]}}.png" alt=""></td>
+    </tr>
+  </table>
+  
+  <button (click)="start()">Start</button>
+</div>
